sites/public/pages/index.module.scss
.section-container {
  max-width: 1600px;
  padding-top: 1rem;
  padding-bottom: 2rem;
  @apply mx-auto;
}

.title {
  align-items: center;
  justify-content: center;
  display: flex;
  h2 {
    font-size: 2rem;
    font-weight: 700;
    line-height: 2.25rem;
  }
  svg {
    padding: 0 0.5rem 0 0;
    fill: $tailwind-primary;
    height: 2rem;
    width: 2rem;
    @screen sm {
      height: 2.5rem;
      width: 2.5rem;
    }
  }
}

.cards-container {
  padding-top: 1.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  @screen lg {
    flex-direction: row;
    align-items: unset;
  }
}

.region-background {
  padding-top: 1rem;
  width: 100%;
  background-color: #f7f7f7;
}

.region {
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 48rem;
  overflow: hidden;
  @apply px-4;
  @screen lg {
    width: 25%;
  }
  img {
    object-fit: cover;
    border-radius: 16px 16px 0 0;
    height: 100%;
    width: 100%;
    @apply pb-2;
  }
}
.region:hover {
  opacity: 0.9;
}

.region__text {
  display: flex;
  justify-content: center;
  // padding-bottom: 2rem;
  font-size: 1.3rem;
  font-weight: 700;
  line-height: 1rem;
  max-width: 278px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  @apply text-primary-dark;
  @media (min-width: 950px) {
    max-width: 209px;
  }
}

.latest-listings {
  padding: 24px 0 0 0;
}

